# theGRPScheme

./: CMakeLists.txt  README.md  example3_11.cpp  example3_12.cpp
GRPForScalarProblems/: scalarGRPScheme.cpp  scalarGRPScheme.h
